# puwifi

./: .gitignore  .pylintrc  LICENSE  README.md  buildexe.sh  keep_alive.py  loginpu.py  main.py  puwifi.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  publish.yml  pylint.yml  python-package-conda.yml  python-publish.yml  scorecards-analysis.yml
.rev_eng/: README.md  source.js  source2.js
modules/: loginpu.py  logout.py
modules/puwifi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: README.md  keep_alive.py  loginpu.py  main.py
python/modules/: wrapper.rmp.py
python/wrapper/: wrapper.rmp.py
src/: puwifi.py
tests/: test_xml_responses_log.py
wrapper/: wrapper.py
